marriott-demo/marriott-demo-output/marriott-demo-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "360"
  name: marriott-demo-service
  namespace: marriott-demo-migration
spec:
  selector:
    app.kubernetes.io/instance: marriott-demo-migration-marriott-demo-instance
  ports:
    - name: marriott-demo-5611
      protocol: TCP
      port: 5611
      targetPort: 5611
    - name: marriott-demo-9090
      protocol: TCP
      port: 9090
      targetPort: 9090
